--- a/ShoppingList2021/App.xaml
+++ b/ShoppingList2021/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <prism:PrismApplication xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com"
+             xmlns:prism="clr-namespace:Prism;assembly=Prism.Forms.Extended"
              x:Class="ShoppingList2021.App">
   <Application.Resources>
 
