--- a/ShoppingList2021/Views/ShoppingItemDetailPage.xaml
+++ b/ShoppingList2021/Views/ShoppingItemDetailPage.xaml
@@ -5,7 +5,12 @@
              xmlns:behaviors="clr-namespace:ShoppingList2021.Behaviors"
              xmlns:dm="clr-namespace:dotMorten.Xamarin.Forms;assembly=dotMorten.Xamarin.Forms.AutoSuggestBox"
              x:Class="ShoppingList2021.Views.ShoppingItemDetailPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}" >
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Photo" Command="{Binding TakePhoto}" />
+        <ToolbarItem Text="Pick" Command="{Binding PickPhoto}" />
+    </ContentPage.ToolbarItems>
 
     <Grid>
         <StackLayout  Orientation="Vertical" Spacing="20">
@@ -15,6 +20,7 @@
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
+                    <RowDefinition Height="6*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*"/>
@@ -38,7 +44,7 @@
                         ItemDisplayBinding="{Binding Description}" SelectedItem="{Binding ItemState}" />
                 <Label Grid.Row="3" Grid.Column="0" Text="Last bought:" />
                 <Label Grid.Row="3" Grid.Column="1" Text="{Binding LastBought, Converter={StaticResource DisplayDateTimeConverter}}" />
-
+                <Image Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Source="{Binding ImageData, Converter={StaticResource ImageDataToImageSourceConverter}}" Aspect="AspectFit" />
             </Grid>
         </StackLayout>
     </Grid>
