--- a/ShoppingList2021/App.xaml
+++ b/ShoppingList2021/App.xaml
@@ -27,6 +27,12 @@
                     </VisualStateGroupList>
                 </Setter>
             </Style>
+            <Style TargetType="Label">
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+            </Style>
+            <Style TargetType="Entry">
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+            </Style>
             <converters:DisplayDateTimeConverter x:Key="DisplayDateTimeConverter"/>
             <converters:DisplayGuidConverter x:Key="DisplayGuidConverter"/>
             <converters:ImageDataToImageSourceConverter x:Key="ImageDataToImageSourceConverter" />
