--- a/ShoppingList2021/Views/ShoppingItemsPage.xaml
+++ b/ShoppingList2021/Views/ShoppingItemsPage.xaml
@@ -7,8 +7,8 @@
              Title="{Binding Title}">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Done" Command="{Binding ShoppingDoneCommand}" />
-        <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
+        <ToolbarItem Text="Done"  Command="{Binding ShoppingDoneCommand}" IconImageSource="ToolbarCheck.png" />
+        <ToolbarItem Text="Add" Command="{Binding AddItemCommand}"  IconImageSource="ToolbarAdd.png" />
     </ContentPage.ToolbarItems>
 
     <RefreshView x:DataType="local:ShoppingItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
