--- a/ShoppingList2021/App.xaml
+++ b/ShoppingList2021/App.xaml
@@ -7,6 +7,9 @@
   
     <Application.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Languages/de-DE.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
             <Color x:Key="Primary">#2196F3</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
